--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,14 +1,13 @@
-name: Deploy Storybook
+name: Deploy docs
 
 on:
   push:
     branches:
-      - main
+     - main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -17,14 +16,16 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
+          cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci --legacy-peer-deps
+      - run: npm ci
 
-      - name: Build Storybook
-        run: npm run build-storybook
+      - run: npm run build
+        env:
+          TURBO_TOKEN: vOI1zD3eFj0kcJWyEbaHhJ4o
+          TURBO_TEAM: barque
 
-      - name: Deploy Storybook
+      - name: Deploy storybook
         run: npm run deploy-storybook -- --ci --existing-output-dir=storybook-static
         env:
           GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
